fixed links on nav bar for mobile on about page

--- a/about.html
+++ b/about.html
@@ -26,8 +26,10 @@
     <div id="mySidenav" class="sidenav">
       <div id="mobile-nav-links">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a onclick="closeNav(); document.getElementById('content').scrollIntoView(true)">Projects</a>
-        <a href="https://drive.google.com/file/d/1WO8jqoFlAT2EMLnsksBzRlgXXUXFj4xh/view?usp=sharing" target="_blank">Resume</a>
+        <a onclick="   closeNav();
+            body.className = " leave"; setTimeout(500); window.location.href="http://achow605.github.io/" "
+        >Projects</a>
+        <a href=" https://drive.google.com/file/d/1WO8jqoFlAT2EMLnsksBzRlgXXUXFj4xh/view?usp=sharing" target="_blank">Resume</a>
         <a href="about">About Me</a>
       </div>
 
