--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -32,7 +32,7 @@
       <img src="../assets/justice-calender-mockup.jpg" alt="Justice Calendar Mockup">
       <h2>Overview</h2>
       <h3>Justice is a Marathon, not a Sprint</h3>
-      <p>Justice Calendar is a simple <b>Google Calendar integration tool</b> designed for people who want to <b>learn more about racial injustice</b> happening in the world and what they can do about it by <b>allocating time for users to learn,
+      <p>Justice Calendar is a simple Google Calendar integration tool designed for people who want to <b>learn more about racial injustice</b> happening in the world and what they can do about it by <b>allocating time for users to learn,
         listen, and reflect</b> while working around their busy schedules.
         <br><br>
         Starting as a project for the UC Davis Design Interactive cohort, we continued working on Justice Calendar after the initial <b>five weeks</b> of the project to work part time with the professor as interaction designers.
