cahnged email and added new footer msg

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
         Let's Connect!
       </h1>
       <p>
-        Let's chat over (virtual) coffee by reaching me at <a href="mailto:achow605@gmail.com" target="_blank">achow605@gmail.com</a> or my <a href="https://www.linkedin.com/in/anthony-chow/" target="_blank">LinkedIn</a>!
+        Let's chat over (virtual) coffee by reaching me at <a href="mailto:antchow@ucdavis.edu" target="_blank">antchow@ucdavis.edu</a> or my <a href="https://www.linkedin.com/in/anthony-chow/" target="_blank">LinkedIn</a>!
       </p>
     </div>
     <div id="portrait">
@@ -89,6 +89,7 @@
   </div>
 
   <div id="footer">
+    Coded with ♥ by <br><br>
     © Anthony Chow 2020
   </div>
 </body>
