added helpr case study to page

--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
       <div class="case-study" data-aos="fade-up">
         <div class="case-study-left">
           <h1 class="product-type">
+            Volunteering Opportunity & Local Resource Tool
+          </h1>
+          <h2 class="product-name">
+            Helpr
+          </h2>
+          <h3 class="product-desc">
+            Discover and connect with local organizations & non-profits in your community
+          </h3>
+          <button style="background-color: #FECB48" onclick="">
+            In Construction
+          </button>
+        </div>
+        <div class="case-study-right">
+          <img class="product-img" src="assets/helpr-mockup.jpg" />
+        </div>
+      </div>
+      <div class="case-study" data-aos="fade-up">
+        <div class="case-study-left">
+          <h1 class="product-type">
             Digital Calendar Integration Tool
           </h1>
           <h2 class="product-name">
