--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -89,7 +89,7 @@
       <p>We consulted with our client and our mentor to move onto our high-fidelity prototype, where we created <b>design guidelines</b> and worked to improve the <b>flow of our scheduling process.</b></p>
       <div class="hf-body">
         <div class="hf-left">
-          <img src="../assets/jc-hf1.gif" alt="First-Time Setup">
+          <img src="../assets/jc-hf1.gif" alt="First-Time Setup" class="dropshadow">
         </div>
         <div class="hf-right">
           <h4>Login & User Setup</h4>
@@ -99,7 +99,7 @@
       </div>
       <div class="hf-body">
         <div class="hf-left">
-          <img src="../assets/jc-hf2.gif" alt="Scheduling">
+          <img src="../assets/jc-hf2.gif" alt="Scheduling" class="dropshadow">
         </div>
         <div class="hf-right">
           <h4>Scheduling</h4>
@@ -108,14 +108,14 @@
       </div>
       <div class="hf-body">
         <div class="hf-left" style="width: 70%;">
-          <img src="../assets/jc-hf3.gif" alt="Calendar View" style="width: 90%;">
+          <img src="../assets/jc-hf3.gif" alt="Calendar View" style="width: 90%;" class="dropshadow">
         </div>
         <div class="hf-right" style="width: 30%;">
           <h4>Calendar View</h4>
           <p>Users can view the scheduled block of time on a weekly calendar. This would only display the calendar events made from Justice Calendar.</p>
         </div>
       </div>
-      <img src="../assets/jc-hf4.gif" alt="Dashboard & More">
+      <img src="../assets/jc-hf4.gif" alt="Dashboard & More" class="dropshadow">
       <h4>Fullscreen Interfaces</h4>
       <p>Users can access a larger dashboard with their scheduled content. User stats can <b>incite more engagement and promotes consistant use of Justice Calendar</b>. Reflections for certain materials may hold a lot of important and insightful
         information, so users can also access past reflections in their journal.</p>
