--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             Helpr
           </h2>
           <h3 class="product-desc">
-            Discover and connect with local organizations & non-profits in your community
+            Discover and connect with local organizations & nonprofits in your community
           </h3>
           <button style="background-color: #FECB48" onclick="">
             In Construction
@@ -93,7 +93,7 @@
           <h3 class="product-desc">
             Helping commit action and understanding towards racial justice
           </h3>
-          <button style="background-color: #EC80A4" onclick="window.location.href='case-studies/justice-calendar';">
+          <button style="background-color: #EC80A4" onclick="window.location.href='case-studies/helpr';">
             View Case Study
           </button>
         </div>
