--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
           <h3 class="product-desc">
             Discover and connect with local organizations & nonprofits in your community
           </h3>
-          <button style="background-color: #FECB48" onclick="">
-            In Construction
+          <button style="background-color: #FECB48" onclick="window.location.href='case-studies/helpr';">
+            View Case Study
           </button>
         </div>
         <div class="case-study-right">
@@ -93,7 +93,7 @@
           <h3 class="product-desc">
             Helping commit action and understanding towards racial justice
           </h3>
-          <button style="background-color: #EC80A4" onclick="window.location.href='case-studies/helpr';">
+          <button style="background-color: #EC80A4" onclick="window.location.href='case-studies/justice-calendar';">
             View Case Study
           </button>
         </div>
