hobbies in about page

--- a/about.html
+++ b/about.html
@@ -54,6 +54,8 @@
         and First-Year Seminars at UC Davis where I created graphics, flyers,
         handbooks, and other digital content.
 
+        <br /><br />Outisde my academic and professional life, I love to take <a href="https://www.instagram.com/acflicks/" target="_blank">portrait photos</a>, <a href="https://www.youtube.com/channel/UCrCMv5AElfQ9MWbOfckG-dw" target="_blank">make videos</a>, play video games, and listen to music!
+
         <br /><br />I am passionate about using human-centered design as a
         form of problem solving and digital story-telling. My journey started
         with me being interested in digital media and design since middle
