--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="style.css" />
   <!-- Fly-In On Scroll -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179974849-1"></script>
 </head>
 
 <body id="body">
@@ -174,18 +176,29 @@
     // Mobile Navigation Menu
 
     function openNav() {
-    document.getElementById("mySidenav").style.width = "100vw";
-    setTimeout(10);
-    document.getElementById("mobile-nav-links").style.opacity = "1";
+      document.getElementById("mySidenav").style.width = "100vw";
+      setTimeout(10);
+      document.getElementById("mobile-nav-links").style.opacity = "1";
     }
 
     function closeNav() {
-    document.getElementById("mobile-nav-links").style.opacity = "0";
-    setTimeout(10);
-    document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("mobile-nav-links").style.opacity = "0";
+      setTimeout(10);
+      document.getElementById("mySidenav").style.width = "0";
 
     }
+  </script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-179974849-1');
   </script>
 
 </body>
