replace png blobs to jpg

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <img id="blob2" src="assets/orangeblob.svg" />
       <img id="blob3" src="assets/redblob.svg" />
     </div>
-    <img src="./assets/tabletblobs.png" id="tabletblobs">
-    <img src="./assets/mobileblobs.png" id="mobileblobs">
+    <img src="./assets/tabletblobs.jpg" id="tabletblobs">
+    <img src="./assets/mobileblobs.jpg" id="mobileblobs">
     <div id="navbar">
       <ul id="links">
         <li><a onclick="document.getElementById('content').scrollIntoView(true)">Projects</a></li>
