encode email on about

--- a/about.html
+++ b/about.html
@@ -81,7 +81,7 @@
         Let's Connect!
       </h1>
       <p>
-        Let's chat over (virtual) coffee by reaching me at <a href="mailto:antchow@ucdavis.edu" target="_blank">antchow@ucdavis.edu</a> or my <a href="https://www.linkedin.com/in/anthony-chow/" target="_blank">LinkedIn</a>!
+        Let's chat over (virtual) coffee by reaching me at <a href="mailto:&#097;&#110;&#116;&#099;&#104;&#111;&#119;&#064;&#117;&#099;&#100;&#097;&#118;&#105;&#115;&#046;&#101;&#100;&#117;" target="_blank">antchow@ucdavis.edu</a> or my <a href="https://www.linkedin.com/in/anthony-chow/" target="_blank">LinkedIn</a>!
       </p>
     </div>
     <div id="portrait">
