added normalize css and added alts to all blob images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="google-site-verification" content="pyTXo0EcGIfvsLAczoDhsnnOOA_ivPa2PGZ-92zIpOQ" />
 
   <title>Anthony Chow • Portfolio</title>
-
+  <!-- Import Normalize CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <!-- import the webpage's stylesheet -->
   <link rel="stylesheet" href="style.css" />
   <!-- Fly-In On Scroll -->
@@ -21,12 +22,12 @@
 <body id="body">
   <div id="header">
     <div id="blobs">
-      <img id="blob1" src="assets/blueblob.svg" />
-      <img id="blob2" src="assets/orangeblob.svg" />
-      <img id="blob3" src="assets/redblob.svg" />
+      <img id="blob1" src="assets/blueblob.svg" alt=blob/>
+      <img id="blob2" src="assets/orangeblob.svg" alt=blob/>
+      <img id="blob3" src="assets/redblob.svg" alt=blob/>
     </div>
-    <img src="./assets/tabletblobs.jpg" id="tabletblobs">
-    <img src="./assets/mobileblobs.jpg" id="mobileblobs">
+    <img src="./assets/tabletblobs.jpg" id="tabletblobs" alt=blob>
+    <img src="./assets/mobileblobs.jpg" id="mobileblobs" alt=blob>
     <div id="navbar">
       <ul id="links">
         <li><a onclick="document.getElementById('content').scrollIntoView(true)">Projects</a></li>
@@ -59,7 +60,7 @@
   </div>
 
   <div class="downArrow bounce">
-    <a href="#case-studies"><img src="assets/downArrow.svg" style="width: 2vw;" /></a>
+    <a href="#case-studies"><img src="assets/downArrow.svg" style="width: 2vw;" alt=blob/></a>
   </div>
 
   <div id="content">
@@ -81,7 +82,7 @@
           </button>
         </div>
         <div class="case-study-right">
-          <img class="product-img" src="assets/helpr-mockup.jpg" />
+          <img class="product-img" src="assets/helpr-mockup.jpg" alt=blob/>
         </div>
       </div>
       <div class="case-study" data-aos="fade-up">
@@ -100,7 +101,7 @@
           </button>
         </div>
         <div class="case-study-right">
-          <img class="product-img" src="assets/justice-calender-mockup.jpg" />
+          <img class="product-img" src="assets/justice-calender-mockup.jpg" alt=blob/>
         </div>
       </div>
       <div class="case-study" data-aos="fade-up">
@@ -120,7 +121,7 @@
           </button>
         </div>
         <div class="case-study-right">
-          <img class="product-img" src="assets/tutorqueue-mockup.jpg" />
+          <img class="product-img" src="assets/tutorqueue-mockup.jpg" alt=blob/>
         </div>
       </div>
     </div>
