moved justice calendar before helpr

--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 </head>
 
 <body id="body">
-  <div id="header">
+  <header id="header">
     <div id="blobs">
-      <img id="blob1" src="assets/blueblob.svg" alt=blob/>
-      <img id="blob2" src="assets/orangeblob.svg" alt=blob/>
-      <img id="blob3" src="assets/redblob.svg" alt=blob/>
+      <img id="blob1" src="assets/blueblob.svg" alt=blob />
+      <img id="blob2" src="assets/orangeblob.svg" alt=blob />
+      <img id="blob3" src="assets/redblob.svg" alt=blob />
     </div>
     <img src="./assets/tabletblobs.jpg" id="tabletblobs" alt=blob>
     <img src="./assets/mobileblobs.jpg" id="mobileblobs" alt=blob>
@@ -57,34 +57,14 @@
       <h1>Hi, I'm <b>Anthony Chow</b></h1>
       <h2>I study Human-Computer Interaction at the University of California Davis</h2>
     </div>
-  </div>
+  </header>
 
   <div class="downArrow bounce">
-    <a href="#case-studies"><img src="assets/downArrow.svg" style="width: 2vw;" alt=blob/></a>
+    <a href="#case-studies"><img src="assets/downArrow.svg" style="width: 2vw;" alt=blob /></a>
   </div>
 
-  <div id="content">
+  <section id="content">
     <div id="case-studies">
-      <!--         <div class="case-study-container"> -->
-      <div class="case-study" data-aos="fade-up">
-        <div class="case-study-left">
-          <h1 class="product-type">
-            Volunteering Opportunity & Local Resource Tool
-          </h1>
-          <h2 class="product-name">
-            Helpr
-          </h2>
-          <h3 class="product-desc">
-            Discover and connect with local organizations & nonprofits in your community
-          </h3>
-          <button style="background-color: #FECB48" onclick="window.location.href='case-studies/helpr';">
-            View Case Study
-          </button>
-        </div>
-        <div class="case-study-right">
-          <img class="product-img" src="assets/helpr-mockup.jpg" alt=blob/>
-        </div>
-      </div>
       <div class="case-study" data-aos="fade-up">
         <div class="case-study-left">
           <h1 class="product-type">
@@ -101,7 +81,26 @@
           </button>
         </div>
         <div class="case-study-right">
-          <img class="product-img" src="assets/justice-calender-mockup.jpg" alt=blob/>
+          <img class="product-img" src="assets/justice-calender-mockup.jpg" alt=blob />
+        </div>
+      </div>
+      <div class="case-study" data-aos="fade-up">
+        <div class="case-study-left">
+          <h1 class="product-type">
+            Volunteering Opportunity & Local Resource Tool
+          </h1>
+          <h2 class="product-name">
+            Helpr
+          </h2>
+          <h3 class="product-desc">
+            Discover and connect with local organizations & nonprofits in your community
+          </h3>
+          <button style="background-color: #FECB48" onclick="window.location.href='case-studies/helpr';">
+            View Case Study
+          </button>
+        </div>
+        <div class="case-study-right">
+          <img class="product-img" src="assets/helpr-mockup.jpg" alt=blob />
         </div>
       </div>
       <div class="case-study" data-aos="fade-up">
@@ -121,16 +120,16 @@
           </button>
         </div>
         <div class="case-study-right">
-          <img class="product-img" src="assets/tutorqueue-mockup.jpg" alt=blob/>
+          <img class="product-img" src="assets/tutorqueue-mockup.jpg" alt=blob />
         </div>
       </div>
     </div>
-  </div>
+  </section>
 
-  <div id="footer">
+  <footer id="footer">
     Coded with ♥ by <br><br>
     © Anthony Chow 2020
-  </div>
+  </footer>
 
   <!-- Fly-In on scroll  -->
 
