Changed JC desc to product design and added image alt to team pic

--- a/case-studies/justice-calendar.html
+++ b/case-studies/justice-calendar.html
@@ -38,7 +38,7 @@
   <div id="case-study-body-container">
     <div id="case-study-body" class="justice-calendar">
       <h1>Justice Calendar</h1>
-        <p><pre style="margin: 0 auto 5vh auto;">User Experience Design      |      Figma & Webflow      |      Team of 4      |      5(+6) Weeks </pre></p>
+        <p><pre style="margin: 0 auto 5vh auto;">Product Design      |      Figma & Webflow      |      Team of 4      |      5(+6) Weeks </pre></p>
       <img src="../assets/justice-calender-mockup.jpg" alt="Justice Calendar Mockup">
       <h2>Overview</h2>
       <h3>Justice is a Marathon, not a Sprint</h3>
@@ -48,7 +48,7 @@
         Starting as a project for the UC Davis Design Interactive cohort, we continued working on Justice Calendar after the initial <b>five weeks</b> of the project to work part time with the professor as interaction designers.
       </p>
       <h2>Contributors & Roles</h2>
-      <img src="../assets/jc-team.jpg">
+      <img src="../assets/jc-team.jpg" alt="Team pictures">
       <h2>Design Process (5 Weeks)</h2>
       <h3>Research</h3>
       <p>Upon starting this sprint, we first consulted with our client, an assistant professor for the Design department at UC Davis. We discussed the initial concept and idea behind a calendar tool that would schedule time to learn about racial
