div to nav on about page

--- a/about.html
+++ b/about.html
@@ -14,13 +14,13 @@
 
 <body id="body">
   <div id="header" class="about-header" style="height: 20vh">
-    <div id="navbar">
+    <nav id="navbar">
       <ul id="links">
         <li id="projects-link">Projects</li>
         <li><a href="https://drive.google.com/file/d/1WO8jqoFlAT2EMLnsksBzRlgXXUXFj4xh/view?usp=sharing" target="_blank">Resume</a></li>
         <li>About Me</li>
       </ul>
-    </div>
+    </nav>
 
     <!-- Mobile Navigation Menu -->
     <div id="mySidenav" class="sidenav">
